# slower-whisper

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  API_QUICK_REFERENCE.md  API_SERVICE.md  API_SUMMARY.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_FLOW_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DIARIZATION_DATA_FLOW_SUMMARY.md  DIARIZATION_FLOWCHART.txt  DIARIZATION_TRACE_LOG.md  DOCKER_DEPLOYMENT_GUIDE.md  DOGFOOD_QUICKSTART.md  Dockerfile  Dockerfile.api  Dockerfile.gpu  EVALUATION_LOG.md  GETTING_STARTED_EVALUATION.md  GITHUB_RELEASE_v1.1.0.md  HEALTH_CHECKS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  PROSODY_QUICK_REFERENCE.md  (+31 more)
.Jules/: palette.md
.github/: CODEOWNERS  FUNDING.yml  SETUP_GUIDE.md  SUPPORT.md  dependabot.yml  pre-commit-config.yaml  pull_request_template.md  settings.yml
.jules/: bolt.md  palette.md  sentinel.md
benchmark-results/: SUMMARY.md  asr-results.json  status.txt
benchmarks/: ASR_REPORT.json  ASR_REPORT.md  BASELINE_RESULTS.md  DATASETS.md  DIARIZATION_REPORT.json  DIARIZATION_REPORT.md  DIARIZATION_REPORT_REAL.json  DIARIZATION_REPORT_REAL.md  EVALUATION.md  INTERPRETING_RESULTS.md  README.md  SPEAKER_ANALYTICS_MVP.md  __init__.py  benchmark_audio_enrich.py  check_diarization_stub.py  compare_results.py  eval_asr.py  eval_asr_diarization.py  eval_diarization.py  eval_emotion.py  eval_speaker_utility.py  eval_summaries.py  manifest_schema.json  results_reporter.py  test_audio_generator.py  throughput.py  verify_iemocap_integration.py
config/: Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml
docs/: ADVANTAGE_LAYER_QUICKSTART.md  AMI_ANNOTATION_SCHEMA.md  AMI_DIRECTORY_LAYOUT.md  AMI_DOWNLOAD_GUIDE.md  AMI_EVAL_SMOKE_TEST_RESULTS.md  AMI_INTEGRATION_SUMMARY.md  AMI_SETUP.md  API_BDD_CONTRACT.md  API_QUICK_REFERENCE.md  API_SERVICE.md  ARCHITECTURE.md  AUDIO_ENRICHMENT.md  BDD_IAC_IMPLEMENTATION_SUMMARY.md  BDD_IAC_LOCKDOWN.md  BDD_IAC_PYTHON_CLI.md  BENCHMARKS.md  BENCHMARK_CACHE_RECOMMENDATIONS.md  BENCHMARK_CACHE_STRATEGY_ANALYSIS.md  BENCHMARK_EVALUATION_QUICKSTART.md  CALLHOME_SETUP.md  CI_CHECKS.md  CLI_REFERENCE.md  COMMONVOICE_SETUP.md  CONFIGURATION.md  CONTRACT_ENFORCEMENT_SUMMARY.md  CURRENT_STATUS.md  DATASET_MANIFEST.md  DEV_ENV_NIX.md  DIARIZATION_FLOWCHART.txt  DIARIZATION_TRACE_LOG.md  DIARIZATION_VERIFICATION_INDEX.md  DOCKER.md  DOCKER_DEPLOYMENT_GUIDE.md  DOGFOOD_NOTES.md  DOGFOOD_QUICKSTART.md  DOGFOOD_SETUP.md  ENVIRONMENT_VARIABLES.md  EVALUATION_LOOP_QUICKREF.md  EVAL_STATUS.md  EVENT_ENVELOPE_SPEC.md  (+49 more)
examples/: API_EXAMPLES_README.md  INDEX.md  QUICK_REFERENCE.md  QUICK_START.md  README_EXAMPLES.md  ami_annotation_example.json  api_client_example.py  basic_transcription.py  chunking_example.py  complete_workflow.py  custom_config.py  emotion_integration.py  enrichment_workflow.py  prosody_demo.py  prosody_quickstart.py  query_audio_features.py  single_file.py  streaming_demo.py  word_timestamps_demo.py  word_timestamps_example.py
features/: __init__.py  api_service.feature  conftest.py  test_api_scenarios.py
integrations/: langchain_loader.py  llamaindex_reader.py
k8s/: .dockerignore  Dockerfile  QUICK_START.md  README.md  build-and-push.sh  configmap.yaml  cronjob.yaml  deployment.yaml  docker-compose.yaml  gpu-resource-quota.yaml  job.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.template.yaml  service.yaml
plans/: ci-verification-plan-complete.md  ci-verification-plan.md  fully_implemented_requirements.md  modularization-analysis.md  modularization-and-schema-locking-implementation-plan.md  modularization-execution-roadmap.md  modularization-file-move-plan.md  phase0-workspace-specification.md  project-structure-analysis.md  v2_0_executive_summary.md  v2_0_implementation_roadmap.md  v2_0_prioritized_tasks.md
scripts/: README.md  __init__.py  audio_enrich.py  check-calibration.py  check_model_cache.py  ci-benchmarks.sh  ci-local.sh  collect-telemetry.py  diarization_stats.py  docker_smoke_test.sh  docs-build.sh  dogfood.sh  download_datasets.py  download_librispeech.sh  fetch_datasets.py  fix_ami_annotations.py  generate-pr-ledger.py  generate-roadmap-status.py  regenerate-requirements.sh  render-doc-snippets.py  setup-env.sh  setup_benchmark_datasets.py  test_entry_points.py  test_entry_points.sh  validate_gold_labels.py  validate_k8s.sh  verify_all.py  verify_all.sh  verify_ami_setup.sh  verify_bdd.sh  verify_bdd_legacy.sh  verify_code_examples.py
slower_whisper/: __init__.py  compat.py  model.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_api_service.py  test_asr_engine.py  test_audio_enrichment.py  test_audio_health.py  test_audio_io.py  test_audio_io_security.py  test_audio_rendering.py  test_audio_state_schema.py  test_audio_utils.py  test_batch_result_models.py  test_benchmark_baselines.py  test_benchmark_cli.py  test_benchmarks_libricss.py  test_cache.py  test_chunking.py  test_cli.py  test_cli_cache.py  test_cli_device.py  test_cli_integration.py  test_cli_ux.py  test_cli_ux_samples_generate.py  test_color_utils.py  test_color_utils_symbols.py  test_compat_shim.py  test_config.py  test_config_merge_bug.py  test_config_sources.py  test_content_moderation.py  test_conversation_physics.py  test_conversation_store.py  test_dataset_manifests.py  test_deprecation_shim.py  test_device.py  test_diarization_mapping.py  test_diarization_skeleton.py  test_diarizer.py  test_dogfood_security.py  (+91 more)
transcription/: __init__.py  _compat_finder.py  _import_guards.py  api.py  asr_engine.py  audio_enrich_cli.py  audio_enrichment.py  audio_health.py  audio_io.py  audio_rendering.py  audio_utils.py  benchmark_cli.py  benchmarks.py  cache.py  chunking.py  cli.py  cli_legacy_transcribe.py  color_utils.py  config.py  config_validation.py  content_moderation.py  device.py  diarization.py  diarization_orchestrator.py  dogfood.py  dogfood_utils.py  emotion.py  enrich.py  (+58 more)
(+301 files in other folders)
