[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slower-whisper"
version = "1.0.0"
description = "Local audio transcription pipeline with optional prosody and emotion enrichment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Steven", email = "steven@example.com"}
]
keywords = ["whisper", "transcription", "audio", "speech-to-text", "prosody", "emotion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Minimum viable dependencies (Stage 1: Transcription only, ~2.5GB)
dependencies = [
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
# Stage 2a: Basic audio enrichment (prosody extraction, ~1GB additional)
# Adds: soundfile, numpy, librosa stack (scipy, scikit-learn, numba)
enrich-basic = [
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
]

# Stage 2b: Prosody with Praat (best accuracy, ~36MB additional)
# Adds: praat-parselmouth for research-grade pitch extraction
enrich-prosody = [
    "slower-whisper[enrich-basic]",
    "praat-parselmouth>=0.4.0",
]

# Stage 2c: Emotion recognition (heavy ML, ~4GB additional)
# Adds: torch, transformers, CUDA dependencies
emotion = [
    "slower-whisper[enrich-basic]",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

# Full audio enrichment (prosody + emotion, ~4GB additional)
full = [
    "slower-whisper[enrich-prosody]",
    "slower-whisper[emotion]",
]

# Alias for backward compatibility
enrich = [
    "slower-whisper[full]",
]

# FastAPI service wrapper
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",  # Required for file uploads
]

# Development dependencies
dev = [
    "slower-whisper[full]",
    # Testing
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",
    "pytest-bdd>=7.0",
    # Code quality
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    # Flake8 plugins
    "flake8-docstrings>=1.7",
    "flake8-bugbear>=23.0",
    "flake8-comprehensions>=3.10",
    # Type stubs
    "types-requests",
    "types-PyYAML",
    # Documentation
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.23",
    "myst-parser>=2.0",
    # Build & Distribution
    "build>=1.0",
    "twine>=4.0",
    "wheel>=0.42",
    # Utilities
    "pre-commit>=3.0",
    "ipython>=8.0",
    "ipdb>=0.13",
    "rich>=13.0",
]

# Security scanning
security = [
    "pip-audit>=2.0",
    "safety>=2.0",
    "bandit>=1.7",
]

# Performance profiling
profiling = [
    "memory-profiler>=0.61",
    "line-profiler>=4.0",
    "py-spy>=0.3",
    "psutil>=5.9.0",
]

[project.scripts]
# Unified CLI (new, recommended)
slower-whisper = "transcription.cli:main"

# Legacy entry points (backward compatibility)
# These still work but are deprecated in favor of the unified CLI
slower-whisper-enrich = "transcription.audio_enrich_cli:main"

[project.urls]
Homepage = "https://github.com/steven/slower-whisper"
Documentation = "https://github.com/steven/slower-whisper#readme"
Repository = "https://github.com/steven/slower-whisper"
Issues = "https://github.com/steven/slower-whisper/issues"

[tool.setuptools]
packages = ["transcription"]

[tool.setuptools.package-data]
transcription = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "parselmouth.*",
    "librosa.*",
    "soundfile.*",
    "transformers.*",
    "torch.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=transcription",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_gpu: marks tests that require GPU",
    "requires_enrich: marks tests that require enrichment dependencies",
]

[tool.coverage.run]
source = ["transcription"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
