[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slower-whisper"
version = "1.7.1"
description = "Local-first conversation signal engine: transform audio into LLM-ready structured data with speaker diarization, prosody, and emotion"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Effortless Metrics", email = "opensource@effortlessmetrics.com"}
]
keywords = [
    "whisper",
    "transcription",
    "audio",
    "speech-to-text",
    "prosody",
    "emotion",
    "diarization",
    "speaker-identification",
    "conversation-intelligence",
    "llm-integration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

# Minimum viable dependencies (Stage 1: Transcription only, ~2.5GB)
dependencies = [
    "faster-whisper>=1.2.1",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
# Stage 2a: Basic audio enrichment (prosody extraction, ~1GB additional)
# Adds: soundfile, numpy, librosa stack (scipy, scikit-learn, numba)
enrich-basic = [
    "soundfile>=0.13.1",
    "numpy>=2.3.5",
    "librosa>=0.11.0",
]

# Stage 2b: Prosody with Praat (best accuracy, ~36MB additional)
# Adds: praat-parselmouth for research-grade pitch extraction
enrich-prosody = [
    "slower-whisper[enrich-basic]",
    "praat-parselmouth>=0.4.7",
]

# Stage 2c: Emotion recognition (heavy ML, ~4GB additional)
# Adds: torch, transformers, CUDA dependencies
emotion = [
    "slower-whisper[enrich-basic]",
    "torch>=2.9.1,<2.9",
    "transformers>=4.57.3",
]

# Stage 2d: Speaker diarization (heavy ML, ~4GB additional)
# Adds: pyannote.audio for speaker identification
# Requires HF_TOKEN environment variable for model access
diarization = [
    "slower-whisper[enrich-basic]",
    "pyannote.audio>=4.0.3",
    "torch>=2.9.1,<2.9",
]

# Full audio enrichment (prosody + emotion + diarization, ~4GB additional)
full = [
    "slower-whisper[enrich-prosody]",
    "slower-whisper[emotion]",
    "slower-whisper[diarization]",
]

# Alias for backward compatibility
enrich = [
    "slower-whisper[full]",
]

# FastAPI service wrapper
api = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",  # Required for file uploads
]

# Development dependencies
dev = [
    "slower-whisper[full]",
    "numpy>=2.3.5",
    # Testing
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "pytest-bdd>=8.1.0",
    "httpx>=0.28.1",  # For API BDD tests
    "jiwer>=4.0.0",  # For WER computation in benchmarks
    "jsonschema>=4.25.1",  # For schema validation CLI/tests
    # Code quality (ruff replaces black, isort, flake8)
    "mypy>=1.19.1",
    "ruff>=0.14.9",
    # Type stubs
    "types-requests",
    "types-PyYAML",
    "types-jsonschema",
    # Documentation
    "sphinx>=9.0.4,<9",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.6.0,<3.6",
    "myst-parser>=4.0.1,<4.1.0",
    # Build & Distribution
    "build>=1.3.0",
    "twine>=6.2.0",
    "wheel>=0.45.1",
    # Utilities
    "pre-commit>=4.5.0",
    "ipython>=9.8.0",
    "ipdb>=0.13.13",
    "rich>=14.2.0",
]

# Security scanning
security = [
    "pip-audit>=2.10.0",
    "safety>=3.7.0",
    "bandit>=1.9.2",
]

# Performance profiling
profiling = [
    "memory-profiler>=0.61.0",
    "line-profiler>=5.0.0",
    "py-spy>=0.4.1",
    "psutil>=7.1.3",
]

[project.scripts]
# Unified CLI (new, recommended)
slower-whisper = "transcription.cli:main"

# Verification and testing CLI (developers)
slower-whisper-verify = "scripts.verify_all:main"

# Dogfooding workflow CLI (for testing before release)
slower-whisper-dogfood = "transcription.dogfood:main"

# Legacy entry points (backward compatibility)
# These still work but are deprecated in favor of the unified CLI
slower-whisper-enrich = "transcription.audio_enrich_cli:main"

[project.urls]
Homepage = "https://github.com/EffortlessMetrics/slower-whisper"
Documentation = "https://github.com/EffortlessMetrics/slower-whisper#readme"
Repository = "https://github.com/EffortlessMetrics/slower-whisper"
Issues = "https://github.com/EffortlessMetrics/slower-whisper/issues"

[tool.setuptools]
packages = ["transcription", "scripts", "integrations"]

[tool.setuptools.package-data]
transcription = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "parselmouth.*",
    "librosa.*",
    "soundfile.*",
    "torch.*",
    "fastapi.*",
    "uvicorn.*",
    "pyannote.*",
]
ignore_missing_imports = true

# Transformers needs special handling: skip following imports entirely
# to avoid mypy 1.11.x crash on DIA module (processing_dia.py)
[[tool.mypy.overrides]]
module = ["transformers.*"]
ignore_missing_imports = true
follow_imports = "skip"

# Strategic test files that should be type-checked
[[tool.mypy.overrides]]
module = [
    "tests.test_llm_utils",
    "tests.test_writers",
    "tests.test_turn_helpers",
    "tests.test_audio_state_schema",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=transcription",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "heavy: marks tests requiring heavy ML models (emotion, diarization)",
    "integration: marks tests as integration tests",
    "requires_gpu: marks tests that require GPU (reserved for future GPU-specific tests)",
    "requires_enrich: marks tests that require enrichment dependencies",
    "requires_diarization: marks tests that require pyannote.audio diarization extra",
]

[tool.coverage.run]
source = ["transcription"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
